--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,7 @@
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
 	"name": "wake-transmission",
+	"production_url": "https://waking.coreyburns.ca",
 	"pages_build_output_dir": "./dist",
 	"compatibility_date": "2024-11-01"
 }
