--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
-    "format": "prettier --write .",
+    "lint": "biome check --verbose",
+    "lint:fix": "biome check --apply",
+    "format": "biome format --write .",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -26,24 +27,31 @@
     "tone": "^15.0.4"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.2",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/react": "^19.2.13",
     "@types/react-dom": "^19.2.3",
-    "@typescript-eslint/eslint-plugin": "^8.54.0",
-    "@typescript-eslint/parser": "^8.54.0",
     "@vitejs/plugin-react": "^5.1.3",
     "autoprefixer": "^10.4.24",
-    "eslint": "^9.39.2",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "globals": "^17.3.0",
+    "biome": "^0.3.3",
     "postcss": "^8.5.6",
     "prettier": "^3.8.1",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.54.0",
     "vite": "^7.3.1"
+  },
+  "biome": {
+    "files": [
+      "src",
+      "vite.config.ts",
+      "index.html",
+      "functions",
+      "*.ts",
+      "*.tsx"
+    ],
+    "extends": [
+      "biome:recommended",
+      "biome:react",
+      "biome:typescript"
+    ]
   }
 }
